profiling-using-exp-runner/backup_FINAL_RESULTS/knapsack_experiment/run_3_repetition_0/energibridge.log
sampling interval: 200, target function: knapsack, input size: ((2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 22, 24, 26, 28, 30, 32, 34, 36, 38, 40), (15, 30, 45, 60, 75, 90, 105, 120, 135, 150, 165, 180, 195, 210, 225, 240, 255, 270, 285, 300), 75)
  File "<string>", line 1
    import sys; import os; import numpy as np; sys.path.append(/Users/rr/GreenLab/ProjectCode/profiling-using-exp-runner/packages); import memory.knapsack as module; weights = (2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 22, 24, 26, 28, 30, 32, 34, 36, 38, 40); values = (15, 30, 45, 60, 75, 90, 105, 120, 135, 150, 165, 180, 195, 210, 225, 240, 255, 270, 285, 300); capacity = 75; module.knapsack(weights, values, capacity); 
                                                               ^
SyntaxError: invalid syntax
Energy consumption in joules: 7.398785659790039 for 0.23358947 sec of execution.
